--- a/README
+++ b/README
@@ -60,14 +60,10 @@ specific commands, which can be viewed in irssi with the command /HELP.
 Community/Bugs/Suggestions:
 ===========================
 
-Mailing-list:           irssi-xmpp-list@cybione.org
-    to subscribe:       irssi-xmpp-list+subscribe@cybione.org
-    to unsuscibre:      irssi-xmpp-list+unsubscribe@cybione.org
+Mailing-list:           irssi-xmpp-list@lists.cybione.org
+    to subscribe:       irssi-xmpp-list+subscribe@lists.cybione.org
+    to unsuscibre:      irssi-xmpp-list+unsubscribe@lists.cybione.org
     archives:		http://cybione.org/lists/irssi-xmpp-list/
-
-Commits-list:           irssi-xmpp-commits@cybione.org
-    to subscribe:       irssi-xmpp-commits+subscribe@cybione.org
-    to unsuscibre:      irssi-xmpp-commits+unsubscribe@cybione.org
 
 MUC room:               irssi-xmpp@chat.jabberfr.org
     archives:		http://chat.jabberfr.org/logs/irssi-xmpp@chat.jabberfr.org/?C=M;O=D
